# researchkit

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  models.yaml  pyproject.toml
.agents/skills/: advise  advise-max  council  explore  researchkit
.claude/: settings.json
.claude/curator-reports/: researchkit-rebuild.md
.claude/hooks/: guard-bash.sh  lint-edited-file.sh  stop-verify.sh
.claude/skills/advise/: SKILL.md
.claude/skills/advise-max/: SKILL.md
.claude/skills/council/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/researchkit/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: models-guide.md  research-pack.md
src/researchkit/: __init__.py  aggregator.py  article_prompt.py  cli.py  council.py  digest.py  doctor.py  final_summary.py  formatter.py  keyword_synthesizer.py  link_analytics.py  materials.py  mcp_server.py  network_retry.py  plugin_api.py  plugins.py  plugins_builtin.py  project.py  prompt_improver.py  prompts.py  safe_io.py  service.py  summarizer.py  system_config.py  utils.py
src/researchkit/observability/: __init__.py  context.py  filters.py  logging_setup.py  run_logging.py
src/researchkit/providers/: __init__.py  antigravity_provider.py  base.py  brave_provider.py  claude_provider.py  codex_provider.py  exa_provider.py  gemini_provider.py  github_provider.py  glm_provider.py  grok_provider.py  grokcli_provider.py  kimi_provider.py  kimicli_provider.py  openai_provider.py  openalex_provider.py  perplexity_provider.py  tavily_provider.py
src/researchkit/server/: __init__.py  app.py
src/researchkit/site_research/: __init__.py  site_researcher.py  types.py
src/researchkit/site_research/connectors/: __init__.py  base.py  exa.py
tests/: __init__.py  conftest.py  test_aggregator_collect.py  test_article_prompt.py  test_brave_openalex.py  test_claude_deep_research.py  test_cli_seam.py  test_council.py  test_doctor.py  test_exa_connector.py  test_final_summary.py  test_formatter.py  test_grokcli_provider.py  test_harness_modes.py  test_keyword_synthesizer.py  test_kimi_provider.py  test_materials.py  test_mcp_server.py  test_network_retry.py  test_package.py  test_perplexity_filters.py  test_plugins.py  test_safe_io.py  test_server.py  test_service.py  test_slugify.py  test_user_sources.py  test_utils.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx
web/src/components/: OutputTabs.tsx  ProgressFeed.tsx  ProjectList.test.tsx  ProjectList.tsx  ReportView.tsx  ResearchForm.test.tsx  ResearchForm.tsx
web/src/lib/: api.ts  sse.test.ts  sse.ts
