[project]
name = "researchkit"
version = "0.1.0"
description = "Define a topic, research everywhere with an LLM council: parallel AI web search synthesized into one cited report"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Domonkos PAL", email = "3684864+Paldom@users.noreply.github.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "openai>=2.30.0",
    "google-genai>=1.70.0",
    "xai-sdk>=1.11.0",
    "perplexityai>=0.31.0",
    "exa-py>=2.11.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
mcp = [
    "mcp>=1.2",
]
analytics = [
    "tldextract>=5.3.0",
]

[project.scripts]
researchkit = "researchkit.cli:main"
researchkit-mcp = "researchkit.mcp_server:main"
researchkit-server = "researchkit.server.app:main"

[project.urls]
Repository = "https://github.com/Paldom/researchkit"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.1.0",
    "ruff==0.15.20",
    "types-pyyaml>=6.0",
    "types-requests>=2.33",
]

[tool.uv]
# Resolver ignores packages published after this date (freshness buffer against
# just-published malicious releases). Bump on each release / periodically —
# Dependabot's uv updates also resolve under this cutoff, so a stale date
# silently stops all dependency updates.
exclude-newer = "2026-07-04T00:00:00Z"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
# RATCHET, never lower: measured 36.6% at the initial port (2026-07-05).
# The ported test suite (203 tests) covers the orchestration core; provider
# HTTP paths are exercised against live APIs and are underrepresented here.
# Raise this number as tests are added — it may go up, never down (AGENTS.md).
fail_under = 35
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true

# ---------------------------------------------------------------------------
# Ported-module exemptions — shrink-only (AGENTS.md "Strictness policy").
# These modules were ported wholesale from the pre-OSS codebase and predate
# the strict gate. Only the error codes they actually trip are disabled, and
# ONLY for these modules; new modules (mcp_server, server.*) run full strict.
# Remove modules from this list as they are brought up to strict — never add.
# Baseline when introduced (2026-07-05): 66 errors across 18 ported modules.
# ---------------------------------------------------------------------------
[[tool.mypy.overrides]]
module = [
    "researchkit.aggregator",
    "researchkit.cli",
    "researchkit.formatter",
    "researchkit.link_analytics",
    "researchkit.observability.*",
    "researchkit.project",
    "researchkit.prompts",
    "researchkit.providers.*",
    "researchkit.safe_io",
    "researchkit.system_config",
]
disable_error_code = [
    "arg-type",
    "call-arg",
    "import-untyped",
    "index",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "return-value",
    "type-arg",
    "union-attr",
    "var-annotated",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # Ruff-specific rules
]
ignore = ["E501"]  # line length is the formatter's job

[tool.ruff.lint.isort]
known-first-party = ["researchkit"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
